welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: '=' expected but ';' found.
	if (nums.length-1>3){
^