welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
	var suce=0
	var talahaine
	if (nums.length-1>3){
		talahaine=3
	}else{
		talahaine=nums.length-1
	}
	for (i<- 0 to talahaine){
		if (nums(i)==9){
			suce+=1
		}
	}
	if (suce>0)
	return true
	else
	return false
}

